tenzir/bats/data/reference/pipelines_local/test_summarize_dot/step_01.ref
error: could not parse `summarize` operator
 --> <input>:1:29
  |
1 | from stdin read zeek-json | summarize x=distinct(.)
  |                             ^^^^^^^^^^^^^^^^^^^^^^^ 
  |
  = note: !! syntax_error: the `.` extractor is currently not supported for `distinct`